Mario: style.css -> changed .main 'overflow: scroll' to 'overflow: auto' to avoid double scrollbars

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   border-right: 1px solid #eee;
   box-shadow: 0px 0px 3px 0px #00000029;
 }
